--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           poetry-version: 1.1.12
       - name: Create Poetry Env
-        run: poetry install && poetry shell
-      - name: Run Unit Tests
-        run: python -m unittest -v
+        run: poetry install
+      - name: Show Env info
+        run: poetry env info
