--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,5 +20,5 @@ jobs:
           poetry-version: 1.1.12
       - name: Create Poetry Env
         run: poetry install
-      - name: Show Env info
-        run: poetry env info
+      - name: Run Unit Tests
+        run: poetry run python -m unittest -v
