--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.10.0
+      - name: Test Results Directory
+        run: mkidr -p test-results/python
       - name: Initialize Poetry
         uses: abatilo/actions-poetry@v2.1.4
         with:
@@ -21,4 +23,5 @@ jobs:
       - name: Create Poetry Env
         run: poetry install
       - name: Run Unit Tests
-        run: poetry run python -m unittest -v
+        run: poetry run pytest --cov=leetcode test/leetcode --disable-pytest-warnings --junitxml=./test-results/python/leetcode.xml
+
