--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: 3.10.0
       - name: Test Results Directory
-        run: mkidr -p test-results/python
+        run: mkdir -p test-results/python
       - name: Initialize Poetry
         uses: abatilo/actions-poetry@v2.1.4
         with:
