--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,8 +7,9 @@ on:
     branches:
       - main
 jobs:
-  Python-UnitTest:
+  Python:
     runs-on: ubuntu-20.04
+    name: Python Tests
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -29,4 +30,14 @@ jobs:
         if: always()
         with:
           files: test-results/**/*.xml
+  Typescript:
+    runs-on: ubuntu-20.04
+    name: Typescript Tests (Deno)
+    steps:
+      - uses: actions/checkout@v2
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.17.1
+      - name: Run Unit Tests
+        run: deno test --unstable ./test/leetcode/
 
