--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -38,12 +38,25 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.17.1
-      - name: Create Test Di
+      - name: Create Test Dir
         run: mkdir -p test-results/ts/temp/
       - name: Run Unit Tests
         run: deno test --unstable ./test/leetcode/ --coverage=./test-results/ts/temp/
       - name: Generate lcov Report
         run: deno coverage test-results/ts/temp/ --lcov > test-results/ts/leetcode.cov
-      - uses: romeovs/lcov-reporter-action@v0.2.16
+#      - uses: romeovs/lcov-reporter-action@v0.2.16
+#        with:
+#          lcov-file: test-results/ts/leetcode.cov
+  Golang:
+    runs-on: ubuntu-20.04
+    name: Golang Tests
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup go
+        uses: actions/setup-go@v2
         with:
-          lcov-file: test-results/ts/leetcode.cov
+          go-version: 1.17.2
+      - name: Create Test Dir
+        run: mkdir -p test-results/go
+      - name: Run Tests
+        run: go test --count=1 ./test/leetcode/...
