--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,9 +3,14 @@ on:
   push:
     branches:
       - main
+    paths: &watch-dir
+      - 'leetcode/**'
+      - 'test/**'
   pull_request:
     branches:
       - main
+    *watch-dir
+
 jobs:
   Python:
     runs-on: ubuntu-20.04
