--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,13 +3,15 @@ on:
   push:
     branches:
       - main
-    paths: &watch-dir
+    paths:
       - 'leetcode/**'
       - 'test/**'
   pull_request:
     branches:
       - main
-    paths: *watch-dir
+    paths:
+      - 'leetcode/**'
+      - 'test/**'
 
 jobs:
   Python:
